# PythonDelegate

./: README.md  pyproject.toml
docs/中文/: Action.md  Delegate.md  Func.md
src/pythondelegate/: actions.py  delegate.py  event_args.py  event_handler.py  events.py  funcs.py
tests/: test_delegates.py  test_delegates2.py
